Only build and push on deploy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       packages: write
-    #if: contains(github.ref, 'refs/tags')
+    if: contains(github.ref, 'refs/tags')
     steps:
     - uses: actions/checkout@v3
 
