Get all permissions on push /shrug

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,8 +70,7 @@ jobs:
   build-and-push:
     needs: sonarcloud
     runs-on: ubuntu-latest
-    permissions:
-      packages: write
+    permissions: write-all
     if: contains(github.ref, 'refs/tags')
     steps:
     - uses: actions/checkout@v3
