--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -v -covermode=count -coverprofile=coverage.out ./...
+      run: make test
 
     - name: gosec
       run: |
